--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,306 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    android:id="@+id/coordinatorLayoutMain"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingTop="10dp"
-    android:background="#ffffff"
+    android:fitsSystemWindows="true"
     tools:context="team5.diabetesself_managmentapp.MainActivity">
 
-    <LinearLayout
-        android:orientation="horizontal"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:weightSum="4"
-        android:id="@+id/linearLayout">
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <LinearLayout
-            android:layout_weight="1.1"
-            android:orientation="vertical"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:gravity="end">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Normal.\nThis is an\nIdeal Range"
-                android:paddingBottom="10dp"
-                android:textColor="#00a8ff"
-                android:id="@+id/textViewNormalNotice"
-                android:visibility="invisible"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Possibly low.\nGet sugar if\nyou feel weak."
-                android:paddingBottom="10dp"
-                android:textColor="#de00ff"
-                android:id="@+id/textViewMediumNotice"
-                android:visibility="invisible"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Too low!\nGet sugar\nimmidately"
-                android:textColor="#ff0000"
-                android:paddingBottom="10dp"
-                android:id="@+id/textViewLowNotice"
-                android:visibility="invisible"/>
-        </LinearLayout>
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="0dp"
-            android:layout_weight="1.8"
-            android:layout_height="match_parent">
-            <com.github.lzyzsd.circleprogress.ArcProgress
-                android:id="@+id/arc_progress"
-                android:layout_width="170dp"
-                android:layout_height="170dp"
-                app:arc_progress="240"
-                app:arc_suffix_text="mg/dL"
-                app:arc_max="350"
-                app:paddingStart="10dp"
-                app:arc_bottom_text_size="10dp"
-                app:arc_stroke_width="10dp"
-                app:arc_unfinished_color="#ff5b5b"
-                app:arc_finished_color="#5bbfff"
-                android:layout_gravity="center_horizontal" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="#009cff"
-                android:layout_gravity="center"
-                android:id="@+id/textViewLastEnteredTime"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:layout_gravity="center"
-                android:text="Last Entered BGL"
-                android:id="@+id/textViewLastEnteredBGL"
-                />
-
-            </LinearLayout>
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_weight="1.1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Too high!\nwork on bringing\nit down."
-                android:textColor="#0cac00"
-                android:paddingBottom="10dp"
-                android:id="@+id/textViewHighNotice"
-                android:visibility="invisible"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Very high!\ndiabetes is\nout of control."
-                android:textColor="#ff6000"
-                android:id="@+id/textViewVeryHighNotice"
-                android:visibility="invisible"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Danger!\nCall your doctor\nimmediately."
-                android:textColor="#ff0000"
-                android:paddingTop="10dp"
-                android:id="@+id/textViewDoctorNotice"
-                android:visibility="invisible"/>
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_marginTop="5dp"
-        android:id="@+id/linearLayoutRow1"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout"
-        android:weightSum="4"
-        >
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:layout_height="wrap_content"
-            android:gravity="end">
-        <FrameLayout
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
-            <EditText
-                android:layout_gravity="center_horizontal"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:ems="10"
-                android:text="300"
-                android:gravity="center_horizontal"
-                android:id="@+id/editTextMean" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Mean"
-                android:paddingTop="35dp"
-                android:layout_gravity="center_horizontal"
-                android:textColor="#ff0000"
-                android:id="@+id/textViewMean"
-                android:visibility="visible"/>
+    </android.support.design.widget.AppBarLayout>
 
-            <SeekBar
-            android:layout_marginTop="30dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/seekBar"
-            android:visibility="invisible"
-            android:max="350"
-            />
-        </FrameLayout>
-        </LinearLayout>
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:paddingRight="10dp"
-            android:layout_height="wrap_content"
-            android:gravity="center">
+    <include layout="@layout/content_main"/>
 
-            <Button
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:background="@drawable/bgl"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Log stuff"
-                android:id="@+id/textViewLogs"
-                />
-        </LinearLayout>
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:paddingRight="10dp"
-            android:layout_height="wrap_content"
-            android:gravity="center">
-
-            <Button
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:background="@drawable/bgl"
-                android:onClick="AddNewBGL"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Add New BGL"
-                android:id="@+id/textViewAddBGL"
-                />
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_marginTop="5dp"
-        android:id="@+id/linearLayoutRow2"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayoutRow1"
-        android:weightSum="4"
-        >
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:layout_height="wrap_content"
-            android:gravity="end">
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <EditText
-                    android:layout_gravity="center_horizontal"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:inputType="number"
-                    android:ems="10"
-                    android:text="300"
-                    android:gravity="center_horizontal"
-                    android:id="@+id/editTextVariant" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="Variant"
-                    android:paddingTop="35dp"
-                    android:layout_gravity="center_horizontal"
-                    android:textColor="#ff0000"
-                    android:id="@+id/textViewVariant"
-                    android:visibility="visible"/>
-
-            </FrameLayout>
-        </LinearLayout>
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:paddingRight="10dp"
-            android:layout_height="wrap_content"
-            android:gravity="center">
-
-            <Button
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:background="@drawable/bgl"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Graphs"
-                android:id="@+id/textViewGraph"
-                />
-        </LinearLayout>
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:paddingRight="10dp"
-            android:layout_height="wrap_content"
-            android:gravity="center">
-
-            <Button
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:background="@drawable/bgl"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Query"
-                android:id="@+id/textViewAddQuery"
-                />
-        </LinearLayout>
-    </LinearLayout>
-
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
