--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -279,6 +279,8 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:background="@drawable/bgl"
+                android:onClick="onGraphClick"
+                android:id="@+id/bGraph"
                 />
             <TextView
                 android:layout_width="wrap_content"
