--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -335,6 +335,8 @@
             <Button
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:onClick="onQueryClick"
+                android:id="@+id/buttonQuery"
                 android:background="@drawable/query"
                 />
             <TextView
