--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -336,6 +336,8 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:background="@drawable/query"
+                android:onClick="onQueryClick"
+                android:id="@+id/buttonQuery"
                 />
             <TextView
                 android:layout_width="wrap_content"
