Added new class AddBGL and moved the related code for adding a new BGL to it. Created a new button listener for adding a new BGL to keep consistancy with the other buttons. Removed alot of code redundancy as well as optimized it to work faster.

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -220,10 +220,11 @@
             android:gravity="center">
 
             <Button
+                android:id="@+id/ButtonAddBGL"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:background="@drawable/bgl"
-                android:onClick="AddNewBGL"/>
+                />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
