Added an activity and layout for adding prescriptions.

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -290,6 +290,7 @@
             android:gravity="center">
 
             <Button
+                android:id="@+id/buttonPrescription"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:background="@drawable/prescription"
