--- a/app/src/main/res/layout/activity_graphs.xml
+++ b/app/src/main/res/layout/activity_graphs.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".AddActivity">
+    tools:context=".LogeventActivity">
 
     <com.jjoe64.graphview.GraphView
         android:layout_width="match_parent"
