--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">10dp</dimen>
     <dimen name="activity_vertical_margin">10dp</dimen>
+    <dimen name="logevent_width">350dp</dimen>
+    <dimen name="logevent_padding">10dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
+    <dimen name="fab_margin">8dp</dimen>
 </resources>
