--- a/app/src/main/res/drawable/layout_corning_exer.xml
+++ b/app/src/main/res/drawable/layout_corning_exer.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="@color/materialgray"/>
+        android:color="@color/exerColor"/>
     <stroke
         android:width="3dip"
-        android:color="@color/materialgray" />
+        android:color="@color/exerColor" />
     <corners
         android:radius="20dip"/>
     <padding
