--- a/app/src/main/res/layout-land/activity_query.xml
+++ b/app/src/main/res/layout-land/activity_query.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    >
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
     <TextView
         android:textSize="16sp"
@@ -46,6 +46,7 @@
         android:text="Search"
         android:id="@+id/confirmQuery"
         android:layout_gravity="center_horizontal" />
+
     </LinearLayout>
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -57,4 +58,5 @@
             android:id="@+id/graphExample" />
 
     </RelativeLayout>
+
 </LinearLayout>
