--- a/app/src/main/res/layout/activity_logevent.xml
+++ b/app/src/main/res/layout/activity_logevent.xml
@@ -17,106 +17,175 @@
             <!--android:layout_width="match_parent"-->
             <!--android:layout_height="match_parent"-->
             <!--android:scrollbars="none"/>-->
+        <!--fabDiet fabExer fabMeds-->
 
-        <RelativeLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/relativelayouteventfabs"
+        <LinearLayout
+            android:padding="5dp"
+            android:weightSum="3"
+            android:id="@+id/gridLayoutButtons"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-                <RelativeLayout
-                    android:id="@+id/relativelayoutDiet"
-                    xmlns:android="http://schemas.android.com/apk/res/android"
-                    xmlns:tools="http://schemas.android.com/tools"
-                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                    android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+                <LinearLayout
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="false"
-                    android:layout_marginRight="20dp">
-
-                        <TextView
-                            android:id="@+id/textViewDiet"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/addDietString"
-                            android:textStyle="bold"/>
-
-                        <android.support.design.widget.FloatingActionButton
+                    android:orientation="vertical">
+                        <ImageButton
                             android:id="@+id/fabDiet"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:background="@drawable/diet"/>
+                        <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_margin="@dimen/fab_margin"
-                            android:layout_centerInParent="true"
-                            android:src="@android:drawable/ic_dialog_email"
-                            app:backgroundTint="@color/colorPrimary"
-                            android:layout_below="@+id/textViewDiet"/>
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/relativelayoutExer"
-                    xmlns:android="http://schemas.android.com/apk/res/android"
-                    xmlns:tools="http://schemas.android.com/tools"
-                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                    android:layout_width="100dp"
+                            android:text="@string/addDietString"
+                            />
+                </LinearLayout>
+                <LinearLayout
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp">
-
-                        <TextView
-                            android:id="@+id/textViewExer"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/addExerString"
-                            android:textStyle="bold"/>
-
-                        <android.support.design.widget.FloatingActionButton
+                    android:orientation="vertical">
+                        <ImageButton
                             android:id="@+id/fabExer"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="@dimen/fab_margin"
-                            android:layout_centerInParent="true"
-                            android:src="@android:drawable/ic_dialog_email"
-                            app:backgroundTint="@color/colorPrimary"
-                            android:layout_below="@+id/textViewExer"
-                            android:layout_centerVertical="true"/>
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/relativelayoutMeds"
-                    xmlns:android="http://schemas.android.com/apk/res/android"
-                    xmlns:tools="http://schemas.android.com/tools"
-                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginLeft="20dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="false">
-
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:background="@drawable/exer"/>
                         <TextView
-                            android:id="@+id/textViewMeds"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/addMedsString"
-                            android:textStyle="bold"/>
-
-                        <android.support.design.widget.FloatingActionButton
-                            android:id="@+id/fabMeds"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:layout_margin="@dimen/fab_margin"
-                            android:src="@android:drawable/ic_dialog_email"
-                            app:backgroundTint="@color/colorPrimary"
-                            android:layout_below="@+id/textViewMeds"/>
-                </RelativeLayout>
+                            android:text="@string/addExerString"
+                            />
+                </LinearLayout>
+                <LinearLayout
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                        <ImageButton
+                            android:id="@+id/fabMeds"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:background="@drawable/med"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/addMedsString"
+                            />
+                </LinearLayout>
 
-        </RelativeLayout>
+
+        </LinearLayout>
+
+        <!--<RelativeLayout-->
+            <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+            <!--xmlns:tools="http://schemas.android.com/tools"-->
+            <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+            <!--android:id="@+id/relativelayouteventfabs"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content">-->
+
+                <!--<RelativeLayout-->
+                    <!--android:id="@+id/relativelayoutDiet"-->
+                    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+                    <!--xmlns:tools="http://schemas.android.com/tools"-->
+                    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+                    <!--android:layout_width="100dp"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_alignParentTop="true"-->
+                    <!--android:layout_alignParentLeft="true"-->
+                    <!--android:layout_alignParentStart="false"-->
+                    <!--android:layout_marginRight="20dp">-->
+
+
+                        <!--<android.support.design.widget.FloatingActionButton-->
+                            <!--android:id="@+id/fabDiet"-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:src="@android:drawable/ic_dialog_email"-->
+                            <!--app:backgroundTint="@color/colorPrimary"-->
+                            <!--android:layout_alignParentTop="true"-->
+                            <!--android:layout_centerHorizontal="true" />-->
+
+                <!--</RelativeLayout>-->
+                 <!---->
+                <!--<RelativeLayout-->
+                    <!--android:id="@+id/relativelayoutExer"-->
+                    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+                    <!--xmlns:tools="http://schemas.android.com/tools"-->
+                    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+                    <!--android:layout_width="100dp"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_centerInParent="true"-->
+                    <!--android:layout_marginLeft="20dp"-->
+                    <!--android:layout_marginRight="20dp">-->
+
+                        <!--<TextView-->
+                            <!--android:id="@+id/textViewExer"-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:hint="@string/addExerString"-->
+                            <!--android:textStyle="bold"/>-->
+                        <!---->
+                        <!--<android.support.design.widget.FloatingActionButton-->
+                            <!--android:id="@+id/fabExer"-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:layout_margin="@dimen/fab_margin"-->
+                            <!--android:layout_centerInParent="true"-->
+                            <!--android:src="@android:drawable/ic_dialog_email"-->
+                            <!--app:backgroundTint="@color/colorPrimary"-->
+                            <!--android:layout_below="@+id/textViewExer"-->
+                            <!--android:layout_centerVertical="true"/>-->
+                <!--</RelativeLayout>-->
+
+                <!--<RelativeLayout-->
+                    <!--android:id="@+id/relativelayoutMeds"-->
+                    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+                    <!--xmlns:tools="http://schemas.android.com/tools"-->
+                    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+                    <!--android:layout_width="100dp"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_alignParentTop="true"-->
+                    <!--android:layout_marginLeft="20dp"-->
+                    <!--android:layout_alignParentRight="true"-->
+                    <!--android:layout_alignParentEnd="false">-->
+
+                        <!--<TextView-->
+                            <!--android:id="@+id/textViewMeds"-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:hint="@string/addMedsString"-->
+                            <!--android:textStyle="bold"/>-->
+                        <!---->
+                        <!--<android.support.design.widget.FloatingActionButton-->
+                            <!--android:id="@+id/fabMeds"-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:layout_centerInParent="true"-->
+                            <!--android:layout_margin="@dimen/fab_margin"-->
+                            <!--android:src="@android:drawable/ic_dialog_email"-->
+                            <!--app:backgroundTint="@color/colorPrimary"-->
+                            <!--android:layout_below="@+id/textViewMeds"/>-->
+                <!--</RelativeLayout>-->
+
+                <!--<TextView-->
+                    <!--android:id="@+id/textViewDiet"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="@string/addDietString"-->
+                    <!--android:textStyle="bold"-->
+                    <!--android:layout_centerVertical="true"-->
+                    <!--android:layout_alignParentLeft="true"-->
+                    <!--android:layout_alignParentStart="true"-->
+                    <!--android:layout_alignRight="@+id/relativelayoutDiet"-->
+                    <!--android:layout_alignEnd="@+id/relativelayoutDiet" />-->
+
+        <!--</RelativeLayout>-->
 
         <RelativeLayout
             android:id="@+id/relativelayoutlistview"
@@ -124,7 +193,7 @@
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:orientation="vertical"
-            android:layout_below="@+id/relativelayouteventfabs"
+            android:layout_below="@+id/gridLayoutButtons"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
