--- a/app/src/main/res/layout/medication_fragment.xml
+++ b/app/src/main/res/layout/medication_fragment.xml
@@ -73,15 +73,23 @@
             android:layout_height="wrap_content"
             android:text="@string/textViewTime"/>
 
-        <Button
+        <EditText
+            android:id="@+id/editTextDateMeds"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/pickDate"/>
+            android:paddingRight="30dp"
+            android:focusable="false"
+            android:onClick="showDatePickerDialog"
+            android:inputType="date"/>
 
-        <Button
+        <EditText
+            android:id="@+id/editTextTimeMeds"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/pickTime"/>
+            android:paddingRight="30dp"
+            android:focusable="false"
+            android:onClick="showTimePickerDialog"
+            android:inputType="time"/>
     </LinearLayout>
 
 </RelativeLayout>
