--- a/app/src/main/res/layout/exercise_layout.xml
+++ b/app/src/main/res/layout/exercise_layout.xml
@@ -1,90 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="350dp"
+                android:layout_width="@dimen/logevent_width"
                 android:layout_height="wrap_content"
-                android:background="@drawable/layout_corning_diet"
+                android:background="@drawable/layout_corning_exer"
                 android:paddingBottom="5dp"
                 android:paddingTop="20dp"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp">
 
     <TextView
-        android:id="@+id/textEditDiet"
+        android:id="@+id/textEditExercise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/textEditDiet"
+        android:text="@string/textEditExercise"
         android:textStyle="bold"/>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  android:id="@+id/linearlayoutdiet"
+                  android:id="@+id/linearlayoutExercise"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
-                  android:layout_below="@+id/textEditDiet">
+                  android:layout_below="@+id/textEditExercise">
 
         <TextView
-            android:id="@+id/textViewDiet"
+            android:id="@+id/textViewExercise"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/textViewDiet"
+            android:text="@string/textViewExercise"
             />
         <EditText
-            android:id="@+id/editTextDietDescription"
+            android:id="@+id/editTextExerciseDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:selectAllOnFocus="true"
-            android:hint="@string/enterDietDescription"
+            android:hint="@string/enterExerciseDescription"
             android:inputType="text"/>
 
     </LinearLayout>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  android:id="@+id/linearlayoutdietqty"
+                  android:id="@+id/linearlayoutExerciseqty"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
-                  android:layout_below="@+id/linearlayoutdiet">
+                  android:layout_below="@+id/linearlayoutExercise">
 
         <TextView
-            android:id="@+id/textViewQty"
+            android:id="@+id/textViewDuration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/textViewQty"/>
+            android:text="@string/textViewDuration"/>
         <EditText
-            android:id="@+id/editTextDietQty"
+            android:id="@+id/editTextExerciseDuration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:selectAllOnFocus="true"
-            android:hint="@string/enterDietQty"
+            android:hint="@string/enterExerciseDuration"
             android:inputType="number"/>
     </LinearLayout>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  android:id="@+id/linearlayoutdiettime"
+                  android:id="@+id/linearlayoutExercisetime"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
-                  android:layout_below="@+id/linearlayoutdietqty">
+                  android:layout_below="@+id/linearlayoutExerciseqty">
 
         <TextView
             android:id="@+id/textViewTime"
             android:layout_width="wrap_content"
-            android:paddingRight="10dp"
             android:layout_height="wrap_content"
             android:text="@string/textViewTime"/>
 
         <EditText
-            android:id="@+id/editTextDateDiet"
+            android:id="@+id/editTextDateExercise"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingRight="30dp"
             android:focusable="false"
             android:onClick="showDatePickerDialog"
             android:inputType="date"/>
 
         <EditText
-            android:id="@+id/editTextTimeDiet"
+            android:id="@+id/editTextTimeExercise"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingRight="30dp"
             android:focusable="false"
             android:onClick="showTimePickerDialog"
             android:inputType="time"/>
