--- a/app/src/main/res/layout/medication_layout.xml
+++ b/app/src/main/res/layout/medication_layout.xml
@@ -1,71 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="350dp"
+                android:layout_width="@dimen/logevent_width"
                 android:layout_height="wrap_content"
-                android:background="@drawable/layout_corning_exer"
+                android:background="@drawable/layout_corning_med"
                 android:paddingBottom="5dp"
                 android:paddingTop="20dp"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp">
 
     <TextView
-        android:id="@+id/textEditExercise"
+        android:id="@+id/textEditMedication"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/textEditExercise"
+        android:text="@string/textEditMedication"
         android:textStyle="bold"/>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  android:id="@+id/linearlayoutExercise"
+                  android:id="@+id/linearlayoutMedication"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
-                  android:layout_below="@+id/textEditExercise">
+                  android:layout_below="@+id/textEditMedication">
 
         <TextView
-            android:id="@+id/textViewExercise"
+            android:id="@+id/textViewMedication"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/textViewExercise"
+            android:text="@string/textViewMedication"
             />
         <EditText
-            android:id="@+id/editTextExerciseDescription"
+            android:id="@+id/editTextMedicationDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:selectAllOnFocus="true"
-            android:hint="@string/enterExerciseDescription"
+            android:hint="@string/enterMedicationDescription"
             android:inputType="text"/>
 
     </LinearLayout>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  android:id="@+id/linearlayoutExerciseqty"
+                  android:id="@+id/linearlayoutMedicationqty"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
-                  android:layout_below="@+id/linearlayoutExercise">
+                  android:layout_below="@+id/linearlayoutMedication">
 
         <TextView
-            android:id="@+id/textViewDuration"
+            android:id="@+id/textViewQty"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/textViewDuration"/>
+            android:text="@string/textViewQty"/>
         <EditText
-            android:id="@+id/editTextExerciseDuration"
+            android:id="@+id/editTextMedicationQty"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:selectAllOnFocus="true"
-            android:hint="@string/enterExerciseDuration"
+            android:hint="@string/enterMedicationQty"
             android:inputType="number"/>
     </LinearLayout>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  android:id="@+id/linearlayoutExercisetime"
+                  android:id="@+id/linearlayoutMedicationtime"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
-                  android:layout_below="@+id/linearlayoutExerciseqty">
+                  android:layout_below="@+id/linearlayoutMedicationqty">
 
         <TextView
             android:id="@+id/textViewTime"
@@ -74,7 +73,7 @@
             android:text="@string/textViewTime"/>
 
         <EditText
-            android:id="@+id/editTextDateExercise"
+            android:id="@+id/editTextDateMeds"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingRight="30dp"
@@ -83,7 +82,7 @@
             android:inputType="date"/>
 
         <EditText
-            android:id="@+id/editTextTimeExercise"
+            android:id="@+id/editTextTimeMeds"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingRight="30dp"
