--- a/app/src/main/res/layout/bglgraph_fragment.xml
+++ b/app/src/main/res/layout/bglgraph_fragment.xml
@@ -12,7 +12,7 @@
                 <com.github.mikephil.charting.charts.LineChart
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/graphExample"/>
+                    android:id="@+id/graphBGL"/>
                 </RelativeLayout>
 
                 <LinearLayout
