--- a/app/src/main/res/layout/dietmain_fragment.xml
+++ b/app/src/main/res/layout/dietmain_fragment.xml
@@ -58,4 +58,24 @@
             android:id="@+id/buttonDietAfter"
             android:layout_gravity="center_horizontal" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <EditText
+            android:layout_weight="1.2"
+            android:textSize="15sp"
+            android:gravity="center"
+            android:id="@+id/editTextDietKeyword"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            />
+        </LinearLayout>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Find Diet by Keyword"
+            android:id="@+id/buttonDietKeyword"
+            android:layout_gravity="center_horizontal" />
+
 </LinearLayout>
