--- a/app/src/main/res/layout/medicationmain_fragment.xml
+++ b/app/src/main/res/layout/medicationmain_fragment.xml
@@ -58,4 +58,23 @@
             android:id="@+id/buttonMedAfter"
             android:layout_gravity="center_horizontal" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <EditText
+            android:layout_weight="1.2"
+            android:textSize="15sp"
+            android:gravity="center"
+            android:id="@+id/editTextMedKeyword"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            />
+    </LinearLayout>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Find Medication by Keyword"
+        android:id="@+id/buttonMedKeyword"
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
